tob/tps/projet-court/evaluations/evaluation1/Proxy.java.log
allumettes/Proxy.java:19: error: cannot find symbol
			throw new OperationImpossibleException();
			          ^
  symbol:   class OperationImpossibleException
  location: class Proxy
1 error
